--- a/files/uxui.html
+++ b/files/uxui.html
@@ -65,8 +65,8 @@
 		
 
 		<div class="text-content">
-			<h3> PROJECT 1 : PRODUCTIVITY APP</h3>
-			<p> I'm currently working on a personal project with the goal of creating an app to improve productivity while using a computer. The ios app will contain features that, when open, allow the user to type specific keys and immediately make available another page/app. </p>
+			<h3> PROJECT 1 : WOMEN'S FASHION APP</h3>
+			<p> I'm currently working on a OS X and iOS application focused on women's fashion.   </p>
 
 			<p> Images coming soon </p>
 		</div>
