new files added

--- a/files/aboutme.html
+++ b/files/aboutme.html
@@ -48,47 +48,50 @@
 					</div>
 				</div>
 				<div>
-					<a href="index.html"><p class="linkhome"> ANA&iuml;S ANGELA LEE  </p></a>
+					<p class="linkhome"> <a href="index.html">ANA&iuml;S ANGELA LEE </a> </p>
 				</div>
 			</div>
 		</div><!--end intro-->
 
-		<div class="picofme">
+		<div class="picofme wow animated fadeIn">
 			<img src="images/me.png" style="width:100%;">
 		</div>
 
-		<div class="text-content">
+		<div class="text-content wow animated fadeIn">
 			<h3> Hi, I'm Angela. </h3>
 			<p> I'm currently a student at UPenn, graduating December of 2016 with a BSE in Digital Media Design - a computer science & graphics program. I'm particularly interested in coding user experience focused projects, thinking from the perspectives of the user, developer, <i>and</i> designer. I'm constantly creating things and trying to bridge the gap between design and code. </p>
 			<br>
 
 			<p align="left"> When I'm not busy coding, I create new things and love to travel! I thrive on change and making new things. I work on a wide variety of projects in my free time, and these projects usually grow to something bigger. </p>
 
-			<p align="left"> I'd love to talk! Want to reach out? The best way to contact me is via email (anaislee@seas.upenn.edu). </p>
+			<p align="left"> I'd love to talk! Want to reach out? The best way to contact me is via email at <a class="orangelink" href="mailto:anaislee@seas.upenn.edu">anaislee@seas.upenn.edu</a>. </p> <br>
+
+			<a href="images/anaislee2016resume.pdf" target="_blank"><button type="button" style="radius">RESUME</button>
+
 		</div>
 	</div> <!--end site-wrapper-->
 
 	<div class="footer">
 		<div class="bottomlinks">
-			<a href="index.html"><p class="linkhome"> ANA&iuml;S ANGELA LEE </p> </a>
+			<p class="linkhome"><a href="index.html"> ANA&iuml;S ANGELA LEE </a></p> 
 		</div>
 		<div class="bottomlinks" style="width:2px;">
 			<p> | </p>
 		</div>
 		<div class="bottomlinks">
-			<a href="mailto:anaislee@seas.upenn.edu"><p class="linkhome">EMAIL<p></a>
+			<p class="linkhome"><a href="mailto:anaislee@seas.upenn.edu">EMAIL</a><p>
 		</div>
 		<div class="bottomlinks" style="width:2px;">
 			<p> | </p>
 		</div>
 		<div class="bottomlinks">
-			<a href="https://linkedin.com/in/anaisangelalee" target="_blank"><p class="linkhome">LINKED IN</p></a>
+			<p class="linkhome"><a href="https://linkedin.com/in/anaisangelalee" target="_blank">LINKED IN</a></p>
 		</div>
 		<div  class="bottomlinks"style="width:2px;">
 			<p> | </p>
 		</div>
 		<div class="bottomlinks">
-			<a href="https://github.com/anais-lee" target="_blank"><p class="linkhome">GITHUB</p></a>
+			<p class="linkhome"><a href="https://github.com/anais-lee" target="_blank">GITHUB</a></p>
 		</div>
 		<!--<div class="bottomlinks">
 			<a href="https://dribbble.com/anaisangelalee" target="_blank"><p class="linkhome">DRIBBBLE</p></a>
