--- a/files/code.html
+++ b/files/code.html
@@ -49,7 +49,7 @@
 					</div>
 				</div>
 				<div >
-					<a href="index.html"><p class="linkhome"> ANA&iuml;S ANGELA LEE </p></a>
+					<p class="linkhome"> <a href="index.html">ANA&iuml;S ANGELA LEE</a> </p>
 				</div>
 			</div>
 		</div><!--end intro-->
@@ -58,9 +58,9 @@
 			<p>Projects with a computer graphics focus.</p>
 		</div>
 
-		<div class="text-content">
+		<div class="text-content wow animated fadeIn">
 			<h3> PROJECT 1 : MONTE CARLO PATH TRACER RENDERER </h3>
-			<p> A renderer using Monte Carlo Path Tracing techniques. Integrated BVH tree data structure to increase efficiency and dramatically reduce runtime. Check out the code at my git repo: <a href="https://github.com/anais-lee/Monte_Carlo_Path_Tracing">Monte_Carlo_Path_Tracing</a> </p>
+			<p> A renderer using Monte Carlo Path Tracing techniques. Integrated BVH tree data structure to increase efficiency and dramatically reduce runtime. Check out the code at my git repo: <a class="orangelink" href="https://github.com/anais-lee/Monte_Carlo_Path_Tracing">Monte Carlo Path Tracing</a> </p>
 		</div>
 
 		<hr> 
@@ -79,25 +79,25 @@
 
 	<div class="footer">
 		<div class="bottomlinks">
-			<a href="index.html"><p class="linkhome"> ANA&iuml;S ANGELA LEE </p> </a>
+			<p class="linkhome"><a href="index.html"> ANA&iuml;S ANGELA LEE </a></p> 
 		</div>
 		<div class="bottomlinks" style="width:2px;">
 			<p> | </p>
 		</div>
 		<div class="bottomlinks">
-			<a href="mailto:anaislee@seas.upenn.edu"><p class="linkhome">EMAIL<p></a>
+			<p class="linkhome"><a href="mailto:anaislee@seas.upenn.edu">EMAIL</a><p>
 		</div>
 		<div class="bottomlinks" style="width:2px;">
 			<p> | </p>
 		</div>
 		<div class="bottomlinks">
-			<a href="https://linkedin.com/in/anaisangelalee" target="_blank"><p class="linkhome">LINKED IN</p></a>
+			<p class="linkhome"><a href="https://linkedin.com/in/anaisangelalee" target="_blank">LINKED IN</a></p>
 		</div>
 		<div  class="bottomlinks"style="width:2px;">
 			<p> | </p>
 		</div>
 		<div class="bottomlinks">
-			<a href="https://github.com/anais-lee" target="_blank"><p class="linkhome">GITHUB</p></a>
+			<p class="linkhome"><a href="https://github.com/anais-lee" target="_blank">GITHUB</a></p>
 		</div>
 		<!--<div class="bottomlinks">
 			<a href="https://dribbble.com/anaisangelalee" target="_blank"><p class="linkhome">DRIBBBLE</p></a>
