--- a/files/digital.html
+++ b/files/digital.html
@@ -56,7 +56,7 @@
 				</div>
 
 				<div >
-					<a href="index.html"><p class="linkhome"> ANA&iuml;S ANGELA LEE </p></a>
+					<p class="linkhome"> <a href="index.html">ANA&iuml;S ANGELA LEE </a></p>
 				</div>
 			</div>
 		</div> <!--end intro-->
@@ -65,7 +65,7 @@
 			<p>  Projects I created using Adobe Creative Suite, Autodesk software, and TVPaint. For web and print. </p>
 		</div>
 
-		<div class="text-content">
+		<div class="text-content wow animated fadeIn">
 			<h3> PROJECT 1 : VECTOR GRAPHICS</h3> 
 			<p> I drew/collaged these images by hand and vectorize them using Adobe photoshop and Illustrator. Below are a few examples. <!-- - check out my Dribbble (link at top) for more.--> </p>
 		</div>
@@ -136,25 +136,25 @@
 
 	<div class="footer">
 		<div class="bottomlinks">
-			<a href="index.html"><p class="linkhome"> ANA&iuml;S ANGELA LEE </p> </a>
+			<p class="linkhome"><a href="index.html"> ANA&iuml;S ANGELA LEE </a></p> 
 		</div>
 		<div class="bottomlinks" style="width:2px;">
 			<p> | </p>
 		</div>
 		<div class="bottomlinks">
-			<a href="mailto:anaislee@seas.upenn.edu"><p class="linkhome">EMAIL<p></a>
+			<p class="linkhome"><a href="mailto:anaislee@seas.upenn.edu">EMAIL</a><p>
 		</div>
 		<div class="bottomlinks" style="width:2px;">
 			<p> | </p>
 		</div>
 		<div class="bottomlinks">
-			<a href="https://linkedin.com/in/anaisangelalee" target="_blank"><p class="linkhome">LINKED IN</p></a>
+			<p class="linkhome"><a href="https://linkedin.com/in/anaisangelalee" target="_blank">LINKED IN</a></p>
 		</div>
 		<div  class="bottomlinks"style="width:2px;">
 			<p> | </p>
 		</div>
 		<div class="bottomlinks">
-			<a href="https://github.com/anais-lee" target="_blank"><p class="linkhome">GITHUB</p></a>
+			<p class="linkhome"><a href="https://github.com/anais-lee" target="_blank">GITHUB</a></p>
 		</div>
 		<!--<div class="bottomlinks">
 			<a href="https://dribbble.com/anaisangelalee" target="_blank"><p class="linkhome">DRIBBBLE</p></a>
