--- a/files/photography.html
+++ b/files/photography.html
@@ -54,7 +54,7 @@
 					</div>
 				</div>
 				<div>
-					<a href="index.html"><p class="linkhome"> ANA&iuml;S ANGELA LEE  </p></a>
+					<p class="linkhome"> <a href="index.html">ANA&iuml;S ANGELA LEE  </a></p>
 				</div>
 			</div>
 		</div> <!--end intro-->
@@ -63,7 +63,7 @@
 			<p> Photos and videos I took + edited using Adobe Creative Suite. </p>
 		</div>
 
-		<div class="text-content">
+		<div class="text-content wow animated fadeIn">
 			<h3> DIGITAL PHOTOGRAPHY </h3>
 			<p> I'm intrigued by interesting compositions and capturing moments. I love taking pictures when I'm travelling but also of my everyday surroundings. Here are just some of my favorite photos I took of different places. Most of these images were taken with my Canon DSLR.</p>
 		</div>
@@ -132,25 +132,25 @@
 
 	<div class="footer">
 		<div class="bottomlinks">
-			<a href="index.html"><p class="linkhome"> ANA&iuml;S ANGELA LEE </p> </a>
+			<p class="linkhome"><a href="index.html"> ANA&iuml;S ANGELA LEE </a></p> 
 		</div>
 		<div class="bottomlinks" style="width:2px;">
 			<p> | </p>
 		</div>
 		<div class="bottomlinks">
-			<a href="mailto:anaislee@seas.upenn.edu"><p class="linkhome">EMAIL<p></a>
+			<p class="linkhome"><a href="mailto:anaislee@seas.upenn.edu">EMAIL</a><p>
 		</div>
 		<div class="bottomlinks" style="width:2px;">
 			<p> | </p>
 		</div>
 		<div class="bottomlinks">
-			<a href="https://linkedin.com/in/anaisangelalee" target="_blank"><p class="linkhome">LINKED IN</p></a>
+			<p class="linkhome"><a href="https://linkedin.com/in/anaisangelalee" target="_blank">LINKED IN</a></p>
 		</div>
 		<div  class="bottomlinks"style="width:2px;">
 			<p> | </p>
 		</div>
 		<div class="bottomlinks">
-			<a href="https://github.com/anais-lee" target="_blank"><p class="linkhome">GITHUB</p></a>
+			<p class="linkhome"><a href="https://github.com/anais-lee" target="_blank">GITHUB</a></p>
 		</div>
 		<!--<div class="bottomlinks">
 			<a href="https://dribbble.com/anaisangelalee" target="_blank"><p class="linkhome">DRIBBBLE</p></a>
