--- a/files/uxui.html
+++ b/files/uxui.html
@@ -54,7 +54,7 @@
 					</div>
 				</div>
 				<div>
-					<a href="index.html"><p class="linkhome"> ANA&iuml;S ANGELA LEE </p></a>
+					<p class="linkhome"> <a href="index.html">ANA&iuml;S ANGELA LEE </a></p>
 				</div>
 			</div>
 		</div><!--end intro-->
@@ -64,8 +64,49 @@
 		</div>
 		
 
-		<div class="text-content">
-			<h3> PROJECT 1 : WOMEN'S FASHION APP</h3>
+		<div class="text-content wow animated fadeIn">
+			<h3> PROJECT 1 : REDESIGNING PERSONAL PORTFOLIO </h3>
+			<p> This was a personal project to redesign my portfolio, keeping UX design techniques in mind and really thinking about the <b>process</b> of design. Optimizing the site across multiple platforms was one of the main goals of this project. </p>
+		</div>
+
+		<div class="images-only wow animated fadeIn">
+			<img src="images/tech.png" style="width:100%;"> <!--image of new page-->
+		</div>
+
+
+		<div class="text-content wow animated fadeIn">
+			<p> I wanted to rethink the design of my previous site. It was a bit overwhelming, showcasing everything visual I've accumulated, including all artwork and photos. I wanted to impress the viewer with animations at every scroll and presenting everything on one page so that everyone would be able to see everything in one go. It was lacking directness in presentation. </p>
+
+			<ol>
+				<li> My first step was identify the changes I wanted to make: 
+					<ul>
+						<li> remove elements not entirely relevant to purpose of site</li>
+						<ul>
+							<li style="list-style-type: circle"> introduce heirarchy and ability to view certain parts of page</li>
+						</ul>
+						<li> prioritize experience on mobile devices </li>
+						<li> eliminate elements that are not supported by all browsers </li>
+					</ul>
+				</li> <br>
+
+				<li> I then made sketches to facilitate the developing process. Having a clear visual goal sped up the front-end development.</li> 
+
+				<p> (Images coming shortly) </p> <!--imgs of wireframe sketches-->
+
+				<li> I then added google analytics to the page to identify trends in viewing the page. I realized the time spent on each page was typically very short. I decided I needed to add options for quicker navigation while minimizing distraction and frustration. </li>
+
+				<p> (Images coming shortly) </p><!--image of sketches->vectors of navigation icons added--> 
+			</ol>
+
+		</div>
+
+
+		<hr>
+
+
+
+		<div class="text-content wow animated fadeIn">
+			<h3> PROJECT 2 : WOMEN'S FASHION APP</h3>
 			<p> I'm currently working on a OS X and iOS application focused on women's fashion.   </p>
 
 			<p> Images coming soon </p>
@@ -74,35 +115,37 @@
 		<hr> 
 
 		<div class="text-content wow animated fadeIn">
-			<h3> PROJECT 2 : ENTERTAINMENT TRACKER ANDROID APP</h3>
-			<p> This android app is a project I am working on with a few fellow classmates. We are in the process of creating a user-friendly mobile android application that allows users to and helps them track or make progress on movies and television shows. Written in Java. </p>
+			<h3> PROJECT 3 : ENTERTAINMENT TRACKER ANDROID APP</h3>
+			<p> This android app is a project I am working on with a few fellow classmates. We are in the process of creating a user-friendly mobile android application that helps and allows users to track and make progress on movies and television shows. Written in Java. </p>
 
 			<p> Images coming soon </p>
 		</div>
+
+		
 
 	</div><!--end site-wrapper-->
 
 	<div class="footer">
 		<div class="bottomlinks">
-			<a href="index.html"><p class="linkhome"> ANA&iuml;S ANGELA LEE </p> </a>
+			<p class="linkhome"><a href="index.html"> ANA&iuml;S ANGELA LEE </a></p> 
 		</div>
 		<div class="bottomlinks" style="width:2px;">
 			<p> | </p>
 		</div>
 		<div class="bottomlinks">
-			<a href="mailto:anaislee@seas.upenn.edu"><p class="linkhome">EMAIL<p></a>
+			<p class="linkhome"><a href="mailto:anaislee@seas.upenn.edu">EMAIL</a><p>
 		</div>
 		<div class="bottomlinks" style="width:2px;">
 			<p> | </p>
 		</div>
 		<div class="bottomlinks">
-			<a href="https://linkedin.com/in/anaisangelalee" target="_blank"><p class="linkhome">LINKED IN</p></a>
+			<p class="linkhome"><a href="https://linkedin.com/in/anaisangelalee" target="_blank">LINKED IN</a></p>
 		</div>
 		<div  class="bottomlinks"style="width:2px;">
 			<p> | </p>
 		</div>
 		<div class="bottomlinks">
-			<a href="https://github.com/anais-lee" target="_blank"><p class="linkhome">GITHUB</p></a>
+			<p class="linkhome"><a href="https://github.com/anais-lee" target="_blank">GITHUB</a></p>
 		</div>
 		<!--<div class="bottomlinks">
 			<a href="https://dribbble.com/anaisangelalee" target="_blank"><p class="linkhome">DRIBBBLE</p></a>
