--- a/files/uxui.html
+++ b/files/uxui.html
@@ -93,7 +93,7 @@
 
 				<p> (Images coming shortly) </p> <!--imgs of wireframe sketches-->
 
-				<li> I then added google analytics to the page to identify trends in viewing the page. I realized the time spent on each page was typically very short. I decided I needed to add options for quicker navigation while minimizing distraction and frustration. </li>
+				<li> I developed the site using html/css + javascript. Code available on my <a class="orangelink" href="https://github.com/anais-lee" target="_blank">github</a>. </li>
 
 				<p> (Images coming shortly) </p><!--image of sketches->vectors of navigation icons added--> 
 			</ol>
